--- a/README.html
+++ b/README.html
@@ -137,7 +137,7 @@ $(document).ready(function () {
 <p>The most commonly used estimator for a binary treatment effect is the risk difference or ATE. The ATE estimation relies on parametric modelling assumptions. Therefore, the <strong>correct model specification</strong> is crucial to obtain unbiased estimates of the true ATE.</p>
 <p>However, Mark van der Laan and collaborators have developed a double-robust estimation procedure to reduce bias against misspecification. The <strong>targeted maximum likelihood estimation (TMLE)</strong> is a semiparametric, efficient substitution estimator. <strong>TMLE</strong> allows for data-adaptive estimation while obtaining valid statistical inferencebased on the <strong>targeted minimum loss-based estimation</strong> and <strong>machine learning algorithms</strong> to minimize the risk of model misspecification.</p>
 <p>Evidence shows that <strong>TMLE</strong> provides the less unbiased estimate of the ATE compared with other double robust estimators.</p>
-<p>The R notebook (<strong>TMLE.nb.html</strong>) will gide you step by step through the implentation of the Targeted Maximum Likelihood Estimation (TMLE).<br />
+<p>The R notebook (<strong>TMLE.nb.html</strong>) will gide you step by step through the implentation of the Targeted Maximum Likelihood Estimation (TMLE). Please, download and open it in you favorite browser.<br />
 Hope you will enjoy it.<br />
 Best regards,<br />
 Miguel Angel Luque Fernandez<br />
