--- a/README.html
+++ b/README.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <div id="causal-inference-in-epidemiology-a-little-overview" class="section level1">
 <h1>Causal Inference in Epidemiology: a little overview</h1>
-<p>During the last 30 years, the <strong>modern epidemiology</strong> has been able to identify some important drawbacks of the classic epidemiologic methods. <strong>Causal Inference and the Neyma-Rubin Potential Outcomes framework</strong> have provided the theory and statistical methods needed to identify recurrent problems in observational epidemologic research, such as:</p>
+<p>During the last 30 years, the <strong>Modern Epidemiology</strong> has been able to identify some important limitations of classic epidemiologic methods when the focus is to explain the main effect of a risk factor on a disease or outcome.</p>
 <ol style="list-style-type: decimal">
 <li>non collapsibility of the odds and hazard ratios,</li>
 <li>impact of paradoxical effects due to conditioning on colliders,</li>
