--- a/README.html
+++ b/README.html
@@ -121,20 +121,20 @@ $(document).ready(function () {
 
 <div id="causal-inference-in-epidemiology-a-little-overview" class="section level1">
 <h1>Causal Inference in Epidemiology: a little overview</h1>
-<p>During the last 30 years, the <strong>Modern Epidemiology</strong> has been able to identify some important limitations of classic epidemiologic methods when the focus is to explain the main effect of a risk factor on a disease or outcome.</p>
+<p>During the last 30 years, the <strong>Modern Epidemiology</strong> has been able to identify significant limitations of classic epidemiologic methods when the focus is to explain the main effect of a risk factor on a disease or outcome:</p>
 <ol style="list-style-type: decimal">
-<li>non collapsibility of the odds and hazard ratios,</li>
+<li>non-collapsibility of the odds and hazard ratios,</li>
 <li>impact of paradoxical effects due to conditioning on colliders,</li>
-<li>selection bias related with the vague understanding of the effect of time on exposure and outcome and,<br />
+<li>selection bias related to the vague understanding of the effect of time on exposure and outcome and,<br />
 </li>
-<li>effect of time dependent confounding and mediators,</li>
+<li>effect of time-dependent confounding and mediators,</li>
 <li>etc.</li>
 </ol>
-<p>To control for confounding, the classical epidemilogic methods require making the assumption that the effect measure is constant across levels of confounders included in the model. Alternatively, James Robins in 1986 showed that using <strong>standardization</strong> implemented through the use of the <strong>G-formula</strong> allowed to obtain unconfounded marginal estimation of the causal average treatment effect (ATE) under causal assumptions.</p>
+<p>Classical epidemiologic methods to control for confounding require making the assumption that the effect measure is constant across levels of confounders included in the model. Alternatively, James Robins in 1986 showed that using <strong>standardisation</strong> implemented through the use of the <strong>G-formula</strong> allows obtaining a unconfounded marginal estimation of the causal average treatment effect (ATE) under causal assumptions.</p>
 <p>The most commonly used estimator for a binary treatment effect is the risk difference or ATE. The ATE estimation relies on parametric modelling assumptions. Therefore, the <strong>correct model specification</strong> is crucial to obtain unbiased estimates of the true ATE.</p>
-<p>However, Mark van der Laan and collaborators have developed a double-robust estimation procedure to reduce bias against misspecification. The <strong>targeted maximum likelihood estimation (TMLE)</strong> is a semiparametric, efficient substitution estimator. <strong>TMLE</strong> allows for data-adaptive estimation while obtaining valid statistical inferencebased on the <strong>targeted minimum loss-based estimation</strong> and <strong>machine learning algorithms</strong> to minimize the risk of model misspecification.</p>
+<p>However, Mark van der Laan and collaborators have developed a double-robust estimation procedure to reduce bias against misspecification. The <strong>targeted maximum likelihood estimation (TMLE)</strong> is a semiparametric, efficient substitution estimator. <strong>TMLE</strong> allows for data-adaptive estimation while obtaining valid statistical inference based on the <strong>targeted minimum loss-based estimation</strong> and <strong>machine learning algorithms</strong> to minimise the risk of model misspecification.</p>
 <p>Evidence shows that <strong>TMLE</strong> provides the less unbiased estimate of the ATE compared with other double robust estimators.</p>
-<p>The R notebook (<strong>TMLE.nb.html</strong>) will gide you step by step through the implentation of the Targeted Maximum Likelihood Estimation (TMLE). Please, download and open it in you favorite browser or alternatively visit the following link:<br />
+<p>The R notebook (<strong>TMLE.nb.html</strong>) will guide you step by step through the implementation of the Targeted Maximum Likelihood Estimation (TMLE). Please, download and open it in your favourite browser or visit the following link:<br />
 <a href="http://migariane.github.io/TMLE.nb.html" class="uri">http://migariane.github.io/TMLE.nb.html</a><br />
 Hope you will enjoy it.<br />
 Best regards,<br />
