--- a/README.html
+++ b/README.html
@@ -121,7 +121,7 @@ $(document).ready(function () {
 
 <div id="causal-inference-in-epidemiology-a-little-overview" class="section level1">
 <h1>Causal Inference in Epidemiology: a little overview</h1>
-<p>During the last 30 years, the <strong>Modern Epidemiology</strong> has been able to identify significant limitations of classic epidemiologic methods when the focus is to explain the main effect of a risk factor on a disease or outcome:</p>
+<p>During the last 30 years, <strong>Modern Epidemiology</strong> has been able to identify significant limitations of classic epidemiologic methods when the focus is to explain the main effect of a risk factor on a disease or outcome:</p>
 <ol style="list-style-type: decimal">
 <li>non-collapsibility of the odds and hazard ratios,</li>
 <li>impact of paradoxical effects due to conditioning on colliders,</li>
